--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- Link to your custom JavaScript file -->
     <script defer src="extrude.js"></script>
-    <script defer src="gears.js"></script>
+    <script defer src="involutegear.js"></script>
     <script defer src="test.js"></script>
-    <!--
-    <script defer src="gears_old.js"></script>
-    <script defer src="wirebuilder.js"></script>
-    <script defer src="gears4.js"></script>
-    <script defer src="view.js"></script>
-    -->
     <style>
         /* Make the canvas take up the full screen */
         body { margin: 0; }
