--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <input type="range" id="mySlider5" min="0" max="100" value="50">
         <span id="sliderValue5">50</span>
     </div><div>
-        <label for="mySlider6">Eccentricity:</label>
+        <label for="mySlider6">teeth:</label>
         <input type="range" id="mySlider6" min="0" max="100" value="50">
-        <span id="sliderValue6">50</span>
+        <span id="sliderValue6">4</span>
       </div>
   </div>
 
