--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- Link to your custom JavaScript file -->
     <script defer src="extrude.js"></script>
+    <script defer src="ellipse_math.js"></script>
     <script defer src="involutegear.js"></script>
     <script defer src="test.js"></script>
      <style>
