--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Link to your custom JavaScript file -->
     <script defer src="extrude.js"></script>
     <script defer src="ellipse_math.js"></script>
-    <script defer src="involutegear.js"></script>
+    <script defer src="gears.js"></script>
     <script defer src="test.js"></script>
      <style>
         /* Style for the slider */
