--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
         <input type="range" id="mySlider1" min="0" max="100" value="50">
         <span id="sliderValue1">50</span>
     </div><div>
-        <label for="mySlider2">Zoom:</label>
+        <label for="mySlider2">Tooth Shift:</label>
         <input type="range" id="mySlider2" min="0" max="100" value="50">
         <span id="sliderValue2">50</span>
     </div><div>
-        <label for="mySlider3">RotateX:</label>
+        <label for="mySlider3">Eccentricity:</label>
         <input type="range" id="mySlider3" min="0" max="100" value="50">
         <span id="sliderValue3">50</span>
     </div><div>
-        <label for="mySlider4">GearA:</label>
+        <label for="mySlider4">Unused:</label>
         <input type="range" id="mySlider4" min="0" max="100" value="50">
         <span id="sliderValue4">50</span>
     </div><div>
-        <label for="mySlider5">GearB:</label>
+        <label for="mySlider5">Unused:</label>
         <input type="range" id="mySlider5" min="0" max="100" value="50">
         <span id="sliderValue5">50</span>
     </div><div>
-        <label for="mySlider6">teeth:</label>
-        <input type="range" id="mySlider6" min="0" max="100" value="50">
-        <span id="sliderValue6">4</span>
+        <label for="mySlider6">teeth count:</label>
+        <input type="range" id="mySlider6" min="0" max="100" value="12">
+        <span id="sliderValue6">12</span>
       </div>
   </div>
 
