--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
         .fixed-num {
           display: inline-block;
-          width: 20px;
+          width: 33px;
         }
 
         /* Style for the three.js canvas */
@@ -64,8 +64,9 @@
     
   <!-- Slider container -->
   <div class="slider-container">
+      SHAPES configuration
     <div>
-        <label for="mySlider1" class="fixed-label">RotateX:</label>
+        <label for="mySlider1" class="fixed-label">unuses:</label>
         <input type="range" id="mySlider1" min="0" max="100" value="50">
         <span id="sliderValue1" class="fixed-num">50</span>
     </div><div>
@@ -74,7 +75,7 @@
         <span id="sliderValue2">50</span>
     </div><div>
         <label for="mySlider3" class="fixed-label">Eccentricity:</label>
-        <input type="range" id="mySlider3" min="0" max="100" value="50">
+        <input type="range" id="mySlider3" min="0" max="80" value="50">
         <span id="sliderValue3">50</span>
     </div><div>
         <label for="mySlider4" class="fixed-label">Unused:</label>
@@ -91,6 +92,7 @@
       </div>
   </div>
   <div class="slider-container2">
+      VIEW configuration
     <div>
         <label for="mySliderB1" class="fixed-label">zoom:</label>
         <input type="range" id="mySliderB1" min="10" max="200" value="50">
@@ -108,9 +110,9 @@
         <input type="range" id="mySliderB4" min="-180" max="180" value="0">
         <span id="sliderValueB4">0</span>
     </div><div>
-        <label for="mySliderB5" class="fixed-label">Unused:</label>
-        <input type="range" id="mySliderB5" min="0" max="100" value="50">
-        <span id="sliderValueB5">50</span>
+        <label for="mySliderB5" class="fixed-label">Gear Rot:</label>
+        <input type="range" id="mySliderB5" min="-180" max="180" value="0">
+        <span id="sliderValueB5">0</span>
     </div><div>
         <label for="mySliderB6" class="fixed-label">Unused:</label>
         <input type="range" id="mySliderB6" min="0" max="100" value="12">
