frame and cut extrude

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Three.js Cube</title>
     <!-- Link to the Three.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/clipper-lib@6.4.2/clipper.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/earcut@2.2.2/dist/earcut.min.js"></script>
     <!-- Link to your custom JavaScript file -->
     <script defer src="extrude.js"></script>
     <script defer src="ellipse_math.js"></script>
