refactor 2 not debugged

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         document.write(`<script defer src="extrude.js?v=${version}"><\/script>`);
         document.write(`<script defer src="ellipse_math.js?v=${version}"><\/script>`);
         document.write(`<script defer src="gears.js?v=${version}"><\/script>`);
-        document.write(`<script defer src="test.js?v=${version}"><\/script>`);
+        document.write(`<script defer src="parts.js?v=${version}"><\/script>`);
+        document.write(`<script defer src="render.js?v=${version}"><\/script>`);
     </script>
     <style>
         /* Style for the slider */
