--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <!-- Link to your custom JavaScript file -->
     <script>
         const version = new Date().getTime()+"."; // Use current timestamp
+        document.write(`<script defer src="clock.js?v=${version}"><\/script>`);
         document.write(`<script defer src="extrude.js?v=${version}"><\/script>`);
         document.write(`<script defer src="ellipse_math.js?v=${version}"><\/script>`);
         document.write(`<script defer src="gears.js?v=${version}"><\/script>`);
-        document.write(`<script defer src="parts.js?v=${version}"><\/script>`);
+        document.write(`<script defer src="part.js?v=${version}"><\/script>`);
         document.write(`<script defer src="render.js?v=${version}"><\/script>`);
     </script>
     <style>
