--- a/index.html
+++ b/index.html
@@ -70,37 +70,38 @@
 <body>
     
   <!-- Slider container -->
-  <div class="slider-container">
-      SHAPES configuration
-    <div>
-        <label for="mySlider1" class="fixed-label">unuses:</label>
-        <input type="range" id="mySlider1" min="0" max="100" value="50">
-        <span id="sliderValue1" class="fixed-num">50</span>
-    </div><div>
-        <label for="mySlider2" class="fixed-label">Tooth Shift:</label>
-        <input type="range" id="mySlider2" min="0" max="100" value="50">
-        <span id="sliderValue2">50</span>
-    </div><div>
-        <label for="mySlider3" class="fixed-label">Eccentricity:</label>
-        <input type="range" id="mySlider3" min="0" max="80" value="50">
-        <span id="sliderValue3">50</span>
-    </div><div>
-        <label for="mySlider4" class="fixed-label">Unused:</label>
-        <input type="range" id="mySlider4" min="0" max="100" value="50">
-        <span id="sliderValue4">50</span>
-    </div><div>
-        <label for="mySlider5" class="fixed-label">Unused:</label>
-        <input type="range" id="mySlider5" min="0" max="100" value="50">
-        <span id="sliderValue5">50</span>
-    </div><div>
-        <label for="mySlider6" class="fixed-label">teeth count:</label>
-        <input type="range" id="mySlider6" min="0" max="100" value="12">
-        <span id="sliderValue6">12</span>
-      </div>
+    <div class="slider-container">
+        SHAPES configuration
         <div>
-            <button onclick="start()">Click Me</button>
+            <label for="mySlider1" class="fixed-label">unuses:</label>
+            <input type="range" id="mySlider1" min="0" max="100" value="50">
+            <span id="sliderValue1" class="fixed-num">50</span>
+        </div><div>
+            <label for="mySlider2" class="fixed-label">Tooth Shift:</label>
+            <input type="range" id="mySlider2" min="0" max="100" value="50">
+            <span id="sliderValue2">50</span>
+        </div><div>
+            <label for="mySlider3" class="fixed-label">Eccentricity:</label>
+            <input type="range" id="mySlider3" min="0" max="80" value="50">
+            <span id="sliderValue3">50</span>
+        </div><div>
+            <label for="mySlider4" class="fixed-label">Unused:</label>
+            <input type="range" id="mySlider4" min="0" max="100" value="50">
+            <span id="sliderValue4">50</span>
+        </div><div>
+            <label for="mySlider5" class="fixed-label">Unused:</label>
+            <input type="range" id="mySlider5" min="0" max="100" value="50">
+            <span id="sliderValue5">50</span>
+        </div><div>
+            <label for="mySlider6" class="fixed-label">teeth count:</label>
+            <input type="range" id="mySlider6" min="0" max="100" value="12">
+            <span id="sliderValue6">12</span>
         </div>
-  </div>
+        <!--
+    <div>
+        <button onclick="start()">Click Me</button>
+    </div>-->
+    </div>
   <div class="slider-container2">
       VIEW configuration
     <div>
