--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
             <input type="range" id="mySlider6" min="0" max="100" value="12">
             <span id="sliderValue6">12</span>
         </div>
-        <!--
     <div>
-        <button onclick="start()">Click Me</button>
-    </div>-->
+        <button onclick="test()">Click Me</button>
+    </div>
     </div>
   <div class="slider-container2">
       VIEW configuration
